// Copyright Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// THIS FILE IS AUTOMATICALLY GENERATED BY MIXGEN.

syntax = "proto3";


// The `apikey` template represents a single API key, which is used for authorization checks.
// 
// Example config:
// 
// ```yaml
// apiVersion: "config.istio.io/v1alpha2"
// kind: instance
// metadata:
//   name: validate-apikey
//   namespace: istio-system
// spec:
//   compiledTemplate: apikey
//   params:
//     api: api.service | ""
//     api_version: api.version | ""
//     api_operation: api.operation | ""
//     api_key: api.key | ""
//     timestamp: request.time
// ```
//
// The `apikey` template represents a single API key, used to authorize API calls.
package apikey;


import "gogoproto/gogo.proto";
import "mixer/adapter/model/v1beta1/extensions.proto";
import "google/protobuf/any.proto";
import "mixer/adapter/model/v1beta1/check.proto";
import "policy/v1beta1/type.proto";

option (istio.mixer.adapter.model.v1beta1.template_variety) = TEMPLATE_VARIETY_CHECK;
option (istio.mixer.adapter.model.v1beta1.template_name) = "apikey";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = false;
option (gogoproto.gostring_all) = false;
option (gogoproto.stable_marshaler_all) = true;

// HandleApiKeyService is implemented by backends that wants to handle request-time 'apikey' instances.
service HandleApiKeyService {
    // HandleApiKey is called by Mixer at request-time to deliver 'apikey' instances to the backend.
    rpc HandleApiKey(HandleApiKeyRequest) returns (istio.mixer.adapter.model.v1beta1.CheckResult);
    
}

// Request message for HandleApiKey method.
message HandleApiKeyRequest {

    // 'apikey' instance.
    InstanceMsg instance = 1;

    // Adapter specific handler configuration.
    //
    // Note: Backends can also implement [InfrastructureBackend][https://istio.io/docs/reference/config/mixer/istio.mixer.adapter.model.v1beta1.html#InfrastructureBackend]
    // service and therefore opt to receive handler configuration during session creation through [InfrastructureBackend.CreateSession][TODO: Link to this fragment]
    // call. In that case, adapter_config will have type_url as 'google.protobuf.Any.type_url' and would contain string
    // value of session_id (returned from InfrastructureBackend.CreateSession).
    google.protobuf.Any adapter_config = 2;

    // Id to dedupe identical requests from Mixer.
    string dedup_id = 3;
}





// Contains instance payload for 'apikey' template. This is passed to infrastructure backends during request-time
// through HandleApiKeyService.HandleApiKey.
message InstanceMsg {

    // Name of the instance as specified in configuration.
    string name = 72295727;
    
    // The API being called (api.service).
    string api = 1;
    
    // The version of the API (api.version).
    string api_version = 2;
    
    // The API operation is being called.
    string api_operation = 3;
    
    // API key used in API call.
    string api_key = 4;
    
    // Timestamp of API call.
    istio.policy.v1beta1.TimeStamp timestamp = 5;
    
}

// Contains inferred type information about specific instance of 'apikey' template. This is passed to
// infrastructure backends during configuration-time through [InfrastructureBackend.CreateSession][TODO: Link to this fragment].
message Type {
    
}


// Represents instance configuration schema for 'apikey' template.
message InstanceParam {
    
    // The API being called (api.service).
    string api = 1;
    
    // The version of the API (api.version).
    string api_version = 2;
    
    // The API operation is being called.
    string api_operation = 3;
    
    // API key used in API call.
    string api_key = 4;
    
    // Timestamp of API call.
    string timestamp = 5;
    
}

